# OpenSkills

./: .gitignore  README.md  blog.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: e2b-integration.md  sandbox-comparison.md  sandbox.md
examples/: demo.py  infographic_demo.py  meeting_summary_demo.py  test_sandbox.py  usage_example.py
examples/feishu-doc-to-dev-spec/: SKILL.md  demo.py
examples/feishu-doc-to-dev-spec/references/: dev-spec-template.md  tech-stack-guide.md
examples/feishu-doc-to-dev-spec/scripts/: fetch_feishu_doc.py
examples/file-to-article-generator/: SKILL.md  demo.py
examples/file-to-article-generator/assets/: output-template.md
examples/file-to-article-generator/output/: generated_article.md
examples/file-to-article-generator/references/: article-types.md  evaluation-prompts.md  file-formats.md  generation-prompts.md  scoring-criteria.md
examples/file-to-article-generator/scripts/: parse_file.py
examples/meeting-summary/: SKILL.md
examples/meeting-summary/references/: finance-handbook.md
examples/meeting-summary/scripts/: upload.py
examples/multi-chart-draw/: .gitignore  README.md  SKILL.md  demo.py
examples/office-skills/: office_demo.py
examples/prompt-optimizer/: SKILL.md
examples/weekly-report-to-annual/: SKILL.md  demo.py
openskills/: __init__.py  agent.py
openskills/cli/: __init__.py  main.py
openskills/core/: __init__.py  executor.py  manager.py  matcher.py  parser.py  skill.py
openskills/llm/: __init__.py  base.py  openai_compat.py  prompt_builder.py
openskills/loaders/: __init__.py  file_loader.py
openskills/models/: __init__.py  dependency.py  instruction.py  metadata.py  resource.py
openskills/sandbox/: __init__.py  client.py  executor.py  logger.py  manager.py
openskills/utils/: __init__.py  frontmatter.py
tests/: __init__.py  test_llm.py  test_manager.py  test_matcher.py  test_parser.py  test_sandbox.py
(+97 files in other folders)
